source/sass/blocks/section-basequipment.scss
.basequipment {
  background-color: $palette-brightcontrast;
  color: $palette-darkcontrast;
  padding: 40px 0 0;

  @media (min-width: $small-desktop-width) {
    padding: 100px 0 50px;
    min-height: 610px;
  }

  @media (min-width: $desktop-width) {
    padding: 150px 0 70px;
    min-height: 780px;
  }
}

.index-main .basequipment {
  @media (min-width: $small-desktop-width) {
    padding-top: 84px;
  }

  @media (min-width: $desktop-width) {
    padding-top: 117px;
  }
}

.basequipment-not {
  position: relative;
  background-color: $palette-brightcontrast;
  color: $palette-darkcontrast;
  padding: 35px 0 0;

  @media (min-width: $small-desktop-width) {
    padding: 77px 0 85px;
    min-height: 470px;
  }

  @media (min-width: $desktop-width) {
    min-height: 500px;
  }
}

// .basequipment-not::after {
//   @media (min-width: $small-desktop-width) {
//     content: "";
//     position: absolute;
//     width: 473px;
//     height: 449px;
//     top: 210px;
//     right: 1%;
//     z-index: 1;
//     background: transparent url("../img/bigbrun-an-sd.svg") no-repeat center;
//   }

//   @media (min-width: $desktop-width) {
//     top: -150px;
//     right: 0;
//     width: 630px;
//     height: 831px;
//     background: transparent url("../img/bigbrun-an-d.svg") no-repeat center;
//   }

//   .tst & {
//     width: 0;
//     height: 0;
//     z-index: -1;
//     background: none;
//   }
// }

.basequipment__title {
  margin: 0 0 10px;
  padding: 0;
  text-align: center;

  @include font-title-middle;

  @media (min-width: $small-desktop-width) {
    margin: 0 0 20px;
    text-align: start;
  }

  @media (min-width: $desktop-width) {
    margin: 0 0 55px;
  }
}

.basequipment__title--single {
  margin: 0 0 25px;

  @media (min-width: $small-desktop-width) {
    margin: 0 0 50px;
  }
}

.basequipment__remark {
  margin: 0 0 25px;
  padding: 0;
  text-align: center;

  @include font-title-middle;

  font-size: 20px;
  color: rgb(189 189 189);

  @media (min-width: $small-desktop-width) {
    margin: 0 0 50px;
    font-size: 40px;
    text-align: start;
  }
}

.basequipment__categories-roster {
  @include list;

  display: flex;
  flex-flow: column nowrap;

  @media (min-width: $small-desktop-width) {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 75px;
  }

  @media (min-width: $desktop-width) {
    gap: 100px;
  }
}

.basequipment__category-container {
  flex-basis: 100%;

  @media (min-width: $small-desktop-width) {
    flex-basis: 31.25%;
  }
}

.basequipment__category {
  flex-basis: 100%;
  margin-bottom: 9px;
  min-height: 340px;

  @media (min-width: $small-desktop-width) {
    flex-basis: 31.25%;
    min-height: 380px;
    margin-bottom: 13px;
  }

  @media (min-width: $desktop-width) {
    min-height: 435px;
  }

  .basequipment__category-container &:nth-child(1) {
    min-height: 310px;
  }

  // &--none {
  //   min-height: 355px;
  // }
}

.basequipment__category-titlebox {
  display: flex;
  min-height: 80px;
  padding: 0 10px;
  margin-bottom: 10px;
  justify-content: center;
  align-items: center;
  border-radius: 20px 0;
  background-color: $palette-secondary;
  transition-delay: 0.1s;

  @media (min-width: $small-desktop-width) {
    min-height: 110px;
    padding: 0 20px;
    margin-bottom: 27px;
    border-radius: 20px 0;
  }

  @media (min-width: $desktop-width) {
    min-height: 160px;
    margin-bottom: 30px;
    border-radius: 30px 0;
  }

  .basequipment__category--none & {
    // min-height: 87px;
    background-color: $palette-accent;
  }
}

.basequipment__category:nth-of-type(1) .basequipment__category-titlebox {
  @media (min-width: $small-desktop-width) {
    transition-delay: 0.1s;
  }
}

.basequipment__category:nth-of-type(n+2) .basequipment__category-titlebox {
  @media (min-width: $small-desktop-width) {
    transition-delay: 0.35s;
  }
}

.basequipment__category:nth-of-type(2) .basequipment__category-titlebox {
  @media (min-width: $small-desktop-width) {
    transition-delay: 0.25s;
  }
}

.basequipment__category-titlebox::after {
  content: "";
  display: block;
  width: 40px;
  height: 40px;
  background-image: url("../img/equipment-icons-base.svg");
  background-repeat: no-repeat;
  background-position: center;

  @media (min-width: $desktop-width) {
    width: 58px;
    height: 58px;
  }

  .basequipment__category--interior & {
    background-image: url("../img/equipment-icons-interior.svg");
  }

  .basequipment__category--communications & {
    background-image: url("../img/equipment-icons-communications.svg");
  }

  .basequipment__category--plumbing & {
    background-image: url("../img/equipment-icons-plumbing.svg");
  }

  .basequipment__category--none & {
    background-image: none;
  }
}

.basequipment__category-title {
  display: flex;
  flex-basis: min-content;
  margin: 0;
  padding: 5px 20px 5px 0;
  max-width: 170px;
  text-transform: uppercase;
  text-align: center;

  @include font-title-small;

  @media (min-width: $small-desktop-width) {
    flex-basis: auto;
    max-width: unset;
    padding-right: 35px;
    background-size: unset;
    font-size: 18px;
  }

  @media (min-width: $desktop-width) {
    padding-right: 45px;
  }

  .basequipment__category--none & {
    margin-left: 37px;
    padding-left: 10px;
    padding-right: 10px;
  }
}

.basequipment__category-list {
  @include list;

  display: flex;
  flex-flow: column nowrap;
}

.basequipment__item {
  margin-bottom: 10px;
  padding-bottom: 5px;
  border-bottom: 1px solid $palette-darkcontrast;

  @include font-primary($color: $palette-prime);

  font-size: 16px;

  &:last-of-type {
    border-color: transparent;
  }
}

.basequipment__item--empty {
  border-bottom: 1px solid transparent;
  pointer-events: none;
}

.basequipment__item-name,
.basequipment__term {
  display: flex;
  justify-content: space-between;
  margin-bottom: 5px;
  padding: 10px 0 9px;
  width: 100%;
  color: $palette-darkcontrast;
  font-size: 16px;
  font-weight: 800;
  text-align: start;

  @media (min-width: $small-desktop-width) {
    margin-bottom: 6px;
    padding: 10px 0 7.5px;
  }
}

.basequipment__item-name {
  &::after {
    content: "+";
  }

  .basequipment__item--open &::after {
    content: "-";
  }

  .basequipment__item--empty &::after {
    content: "";
  }
}

.basequipment__details {
  margin: 0 0 10px;
}

.basequipment__item-content {
  font-size: 16px;
  max-height: 0;
  margin-bottom: 1px;
  overflow: hidden;
  opacity: 0;
  transition: opacity 0.3s ease-out, max-height 0.42s ease;

  @media (min-width: $small-desktop-width) {
    margin-bottom: 2px;
  }

  .basequipment__item--open & {
    opacity: 1;
  }
}

.basequipment__item-content p {
  margin: 7px 0 19px;
  padding: 0;

  @media (min-width: $small-desktop-width) {
    margin: 0;
    padding: 6px 0 14px;
  }
}

